<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:backgroundTint="@color/main"

        android:title="@string/home_navigation"
        app:actionLayout="@menu/menu_item_layout" />
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:backgroundTint="@color/main"

        android:title="@string/search_navigation"
        app:actionLayout="@menu/menu_item_layout" />

    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:backgroundTint="@color/main"

        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite_navigation"
        app:actionLayout="@menu/menu_item_layout" />
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:backgroundTint="@color/main"

        android:icon="@drawable/ic_account_circle"
        android:title="@string/account_navigation"
        app:actionLayout="@menu/menu_item_layout" />
</menu>