<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_today_layout"
    android:layout_width="150dp"
    android:layout_height="100dp"
    android:layout_margin="8dp"
    android:background="@drawable/background_rounded">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/recipe_today_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_recipe"
            android:scaleType="center"
            app:srcCompat="@drawable/comtam" />

        <ImageView
            android:id="@+id/overlay_bg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/image_bg"
            app:srcCompat="@drawable/overlay_bg" />

        <TextView
            android:id="@+id/recipe_today_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/be_vietnam_bold"
            android:lineSpacingExtra="0sp"
            android:paddingLeft="15sp"
            android:paddingRight="15sp"
            android:paddingBottom="5sp"
            android:text="@string/recipe_today"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>